--- a/inbattle/app/views/welcome/index.html.erb
+++ b/inbattle/app/views/welcome/index.html.erb
@@ -1,2 +1,93 @@
-<h1>Hello, world!</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<html><head>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+<meta name="description" content="">
+<meta name="author" content="">
+<link rel="icon" href="img/favicon.ico">
+
+<title>IN Battle</title>
+
+<link href="css/bootstrap.min.css" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="css/estilo_home.css">
+</head>
+
+<body>
+	
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="index.php"><img class="img-responsive logo-site" src="img/inbattle.png"></a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="index.php">Batalha</a></li>
+		<li><a href="alistamento.php">Alistamento</a></li>
+		<li><a href="heroi.php">Heróis de Guerra</a></li>
+		<li><a href="sos.php">SOS</a></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+
+<div class="container-fluid">
+	<div class="row" id="arame"></div>
+</div>
+	<div class="corpo">
+	  <div class="container">
+		<div class="row">
+			<h2 id="qualTema">Clique na imagem do combatente que representa melhor o tema:</h2>
+			<h1>
+                            </h1>
+		</div>
+		<div class="battle row center-block text-center">
+			<span> E aí, vai deixar mesmo o campo de batalha vazio? </span><br>
+			<span>Tira essa farda preta que vc é moleque...</span><br>
+			<span>ou poste logo uma foto no Instagram com a <b>#INBattle</b></span>
+		</div>
+		        </div> <!-- /.container -->
+
+	</div> <!-- /.corpo -->
+	
+﻿<div class="footer">
+	  <div class="container">
+		<div class="row text-center col-xs-12 col-sm-12 col-md-12 col-lg-12">
+			<div class="col-xs-12 col-sm-3">
+				<a href="http://injunior.com.br"><img src="img/logo.png" class="img_footer" alt="Logo da IN"></a>
+			</div>
+			<div class="col-xs-12 col-sm-9">
+				<p class="p-footer-top"> IN Junior - Empresa Junior do Instituto de Computação da UFF - Todos os direitos reservados</p>
+				<p class="p-footer">Rua Passos da Pátria, 156 - Instituto de Computação - Sala 115-B, Niterói</p>
+			</div>
+		</div>
+	  </div> <!-- /.container -->
+	</div> <!-- /.footer -->	
+
+	<script async="" src="//www.google-analytics.com/analytics.js"></script><script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" type="text/javascript"></script>
+	<script type="text/javascript" src="http://simplewebcodes.com/wp-content/themes/scriptous/plugins/bootstrap/js/bootstrap.min.js?ver=4.0"></script>
+	<script src="appendInsta.js"></script>
+	<script src="js/jquery.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+					(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+				m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+		ga('create', 'UA-69749775-1', 'auto');
+		ga('send', 'pageview');
+
+	</script>
+
+
+</body></html>
