--- a/inbattle/app/views/welcome/index.html.erb
+++ b/inbattle/app/views/welcome/index.html.erb
@@ -31,10 +31,10 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="index.php">Batalha</a></li>
-		<li><a href="alistamento.php">Alistamento</a></li>
-		<li><a href="heroi.php">Heróis de Guerra</a></li>
-		<li><a href="sos.php">SOS</a></li>
+        <li><a href="/paginas/home">Batalha</a></li>
+		<li><a href="/paginas/alistamento">Alistamento</a></li>
+		<li><a href="/paginas/heroisdeguerra">Heróis de Guerra</a></li>
+		<li><a href="/paginas/sos">SOS</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
