--- a/inbattle/app/views/paginas/home.html.erb
+++ b/inbattle/app/views/paginas/home.html.erb
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-	
+	  <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
