diversas paginas navegando

--- a/inbattle/app/views/paginas/heroisdeguerra.html.erb
+++ b/inbattle/app/views/paginas/heroisdeguerra.html.erb
@@ -1,2 +1,8 @@
-<h1>Paginas#heroisdeguerra</h1>
+    <div class="container">
+			<h2>Heróis de Guerra</h2>
+<%= link_to image_tag("arame.gif", alt: "InBattle cerca"),
+            'http://injunior.com/' %>
+    </div>
+	
+	<h1>Paginas#heroisdeguerra</h1>
 <p>Find me in app/views/paginas/heroisdeguerra.html.erb</p>
