--- a/inbattle/app/views/paginas/sos.html.erb
+++ b/inbattle/app/views/paginas/sos.html.erb
@@ -1,2 +1,8 @@
+    <div class="container">
+			<h2>S.O.S.</h2>
+<%= link_to image_tag("arame.gif", alt: "InBattle cerca"),
+            'http://injunior.com/' %>
+    </div>
+	
 <h1>Paginas#sos</h1>
 <p>Find me in app/views/paginas/sos.html.erb</p>
