--- a/inbattle/app/views/microposts/show.html.erb
+++ b/inbattle/app/views/microposts/show.html.erb
@@ -1,3 +1,12 @@
 
-<%= @micropost.tema %>
-
+<% provide(:title, @micropost.tema) %>
+<div class="row">
+  <aside class="col-md-4">
+    <section class="micropost_info">
+      <h1>
+        <%= imagem_for @micropost %>
+        <%= @micropost.endereco %>
+      </h1>
+    </section>
+  </aside>
+</div>
