Avanços com login e logout

--- a/inbattle/app/views/microposts/show.html.erb
+++ b/inbattle/app/views/microposts/show.html.erb
@@ -1,10 +1,10 @@
 
-<% provide(:title, @micropost.tema) %>
+<% provide(:title, @micropost) %>
 <div class="row">
   <aside class="col-md-4">
     <section class="micropost_info">
       <h1>
-        <%= imagem_for @micropost %>
+
         <%= @micropost.endereco %>
       </h1>
     </section>
