--- a/inbattle/app/views/microposts/new.html.erb
+++ b/inbattle/app/views/microposts/new.html.erb
@@ -4,7 +4,7 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= form_for(@micropost) do |f| %>
-
+		<%= render "shared/micro_error_messages" %>
 
       <%= f.label :tema %>
       <%= f.text_field :tema, class: 'form-control' %>
