--- a/inbattle/app/views/layouts/_header.html.erb
+++ b/inbattle/app/views/layouts/_header.html.erb
@@ -1,33 +1,41 @@
-<nav class="navbar navbar-default">
+<head>
+  <title>Inbattle</title>
+  <nav class="navbar navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <%= link_to image_tag("titulo.png", alt: "InBattle logo"), root_path %>
+<%= link_to image_tag("titulo.gif", alt: "InBattle logo"),
+            'http://injunior.com/' %>
     </div>
+
+	</head>
+	
+<body>
     <header class="navbar navbar-fixed-top navbar-inverse">
       <div class="container">
-        <% if !logged_in? %>
+
         <nav>
-    		  <ul class = "nav navbar-nav navbar-right">
-    		    <li><%= link_to "Editar usuários", 'users/new' %></li>
-            <li><%= link_to "Editar Temas", 'microposts/new' %></li>
-            <li><%= link_to "Log out", logout_path, method: "delete" %></li>
-    		  </ul>
-  		  </nav>
-  		  
-        <% else %>
-          <nav>
-            <ul class="nav navbar-nav navbar-right">
-              <li><%= link_to "Home",    root_path %></li>
-              <li><%= link_to "Alistamento",   'alistamento' %></li>
-              <li><%= link_to "Heróis de Guerra", 'heroisdeguerra' %></li>
-              <li><%= link_to "S.O.S.", 'sos' %></li>
-            </ul>
-          </nav>
-        <% end %>		
+         <ul class="nav navbar-nav navbar-right">
+			<li><%= link_to "Home",    root_path %></li>
+			<li><%= link_to "Alistamento",   'alistamento' %></li>
+            <li><%= link_to "Heróis de Guerra", 'heroisdeguerra' %></li>
+            <li><%= link_to "S.O.S.", 'sos' %></li>
+          </ul>
+        </nav>
       </div>
     </header>
-    
+    <div class="container">
+	<%= link_to image_tag("arame.gif", alt: "InBattle cerca"),
+            'http://injunior.com/' %></li>
+
+    </div>
+	
+	
     <!-- Collect the nav links, forms, and other content for toggling -->
+
   </div><!-- /.container-fluid -->
 </nav>
+  <%= stylesheet_link_tag    'default', media: 'all', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'default', 'data-turbolinks-track' => true %>
+  <%= csrf_meta_tags %>
+</body>
