--- a/inbattle/app/views/layouts/application.html.erb
+++ b/inbattle/app/views/layouts/application.html.erb
@@ -2,23 +2,68 @@
 <html>
 <head>
   <title>Inbattle</title>
+  <nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+<%= link_to image_tag("titulo.gif", alt: "InBattle logo"),
+            'http://injunior.com/' %>
+    </div>
+
+	</head>
+	
+	
+	
+
+
+	
+	
+	
+	
+	
+<body>
+    <header class="navbar navbar-fixed-top navbar-inverse">
+      <div class="container">
+        <% if logged_in? %>
+          <nav>
+		  <ul class = "nav navbar-nav navbar-right">
+		  <li><%= link_to "Editar usuários", 'users/new' %></li>
+          <li><%= link_to "Editar Temas", 'microposts/new' %></li>
+          <li><%= link_to "Log out", logout_path, method: "delete" %></li>
+		  </ul>
+		  </nav>
+        <% else %>
+        <nav>
+         <ul class="nav navbar-nav navbar-right">
+			<li><%= link_to "Home",    root_path %></li>
+			<li><%= link_to "Alistamento",   'alistamento' %></li>
+            <li><%= link_to "Heróis de Guerra", 'heroisdeguerra' %></li>
+            <li><%= link_to "S.O.S.", 'sos' %></li>
+          </ul>
+        </nav>
+        <% end %>		
+      </div>
+    </header>
+    <div class="container">
+	<%= link_to image_tag("arame.gif", alt: "InBattle cerca"),
+            'http://injunior.com/' %></li>
+
+    </div>
+	
+	
+    <!-- Collect the nav links, forms, and other content for toggling -->
+
+  </div><!-- /.container-fluid -->
+</nav>
   <%= stylesheet_link_tag    'default', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'default', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
-</head>
+</body>
+
 
 <body>
-  <%= render 'layouts/header' %>
-  
-  
-  <%= yield %>
-  
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" type="text/javascript"></script>
-	<script type="text/javascript" src="http://simplewebcodes.com/wp-content/themes/scriptous/plugins/bootstrap/js/bootstrap.min.js?ver=4.0"></script>
-	<script src="js/jquery.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	
-	<%= render 'layouts/footer' %>
-  
+
+<%= yield %>
+
 </body>
 </html>
