--- a/inbattle/app/views/paginas/home.html.erb
+++ b/inbattle/app/views/paginas/home.html.erb
@@ -1,21 +1,78 @@
-<div class="container-fluid">
-  <div class="container">
-		<div class="corpo">
-			<div class="container">
-				<div class="row">
-					<h2 id="qualTema">Clique na imagem do combatente que representa melhor o tema:</h2>
-				</div>
-				<div class="battle row center-block text-center">
-					<span> E aí, vai deixar mesmo o campo de batalha vazio? </span><br>
-					<span>Tira essa farda preta que vc é moleque...</span><br>
-					<span>ou poste logo uma foto no Instagram com a <b>#INBattle</b></span>
-				</div>
-		  </div> <!-- /.container -->
-	  </div> <!-- /.corpo -->
-	</div>	
+<html>
 
-	<script async="" src="//www.google-analytics.com/analytics.js"></script>
+<head>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+<meta name="description" content="">
+<meta name="author" content="">
+
+<title>IN Battle</title>
+
+<link href="css/bootstrap.min.css" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="css/estilo_home.css">
+</head>
+
+<body>
+	  <%= link_to "Ad", signup_path, class: "btn btn-lg btn-primary" %>
+      <% if logged_in? %>
+		<%= link_to "BD", atualiza_path, class: "btn btn-lg btn-primary" %>
+	  <% end %>
+			
+			
+<div class="container-fluid">
+    <div class="container">
+
+	<ul class="meio">
+		<% @micropost = Micropost.find(1) %>
+			<li><h1><%= @micropost.tema %></h1></li>
+		
+		<li><%= link_to image_tag("@micropost.endereco", alt: "InBattle cerca"), '#' %> </li>
+		<li><%= link_to image_tag("@micropost.endereco", alt: "InBattle cerca"), '#' %> </li>
+	<li><%= link_to image_tag("arame.gif", alt: "InBattle cerca"), '#' %> </li>
+	</ul>
+	</div>
+
+	<div class="corpo">
+	  <div class="container">
+		<div class="row">
+			<h2 id="qualTema">Clique na imagem do combatente que representa melhor o tema:</h2>
+			<h1>
+                            </h1>
+		</div>
+		<div class="battle row center-block text-center">
+			<span> E aí, vai deixar mesmo o campo de batalha vazio? </span><br>
+			<span>Tira essa farda preta que vc é moleque...</span><br>
+			<span>ou poste logo uma foto no Instagram com a <b>#INBattle</b></span>
+		</div>
+		        </div> <!-- /.container -->
+
+	</div> <!-- /.corpo -->
+</div>	
+
+﻿<div class="footer">
+	  <div class="container">
+		<div class="row text-center col-xs-12 col-sm-12 col-md-12 col-lg-12">
+			<div class="col-xs-12 col-sm-3">
+    <div class="container">
+		<%= link_to image_tag("logo.png", alt: "InJunior"),
+            'http://injunior.com/' %>
+    </div>
+			</div>
+			<div class="col-xs-12 col-sm-9">
+				<p class="p-footer-top"> IN Junior - Empresa Junior do Instituto de Computação da UFF - Todos os direitos reservados</p>
+				<p class="p-footer">Rua Passos da Pátria, 156 - Instituto de Computação - Sala 115-B, Niterói</p>
+			</div>
+		</div>
+	  </div> <!-- /.container -->
+	</div> <!-- /.footer -->	
+
+	<script async="" src="//www.google-analytics.com/analytics.js"></script><script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" type="text/javascript"></script>
+	<script type="text/javascript" src="http://simplewebcodes.com/wp-content/themes/scriptous/plugins/bootstrap/js/bootstrap.min.js?ver=4.0"></script>
 	<script src="appendInsta.js"></script>
+	<script src="js/jquery.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
 	<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 					(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -24,5 +81,9 @@
 
 		ga('create', 'UA-69749775-1', 'auto');
 		ga('send', 'pageview');
+
 	</script>
-</div>	
+
+
+</body>
+</html>
