--- a/inbattle/app/views/paginas/sos.html.erb
+++ b/inbattle/app/views/paginas/sos.html.erb
@@ -1,19 +1,11 @@
-<div class="container">
-	<div class="col-lg-6">
-		<h1>Dúvidas, elogios, sugestões? Entre em contato conosco!</h1>
-		
-		<p>Nome</p>
-		<p>Email</p>
-		<p>Mensagem</p>
-		<p>Enviar</p>
-	</div>
-	<div class="col-lg-6">
-		<h1><strong>A IN Junior</strong></h1>
-		<p>A IN Junior é a empresa júnior de computação da UFF. Atuamos desde novembro de 2014 em consultoria em TI e criação de sites e sistemas web.</p>
-		<p>Nossa missão é desenvolver pessoas e entregar soluções inteligentes em TI. Acreditamos que através do nosso trabalho, dedicação e a integração com o MEJ e a Universidade podemos entregar uma experiência enriquecedora para nossos membrose retribuir a sociedade com nossos serviços.</p>
-	</div>
+    <div class="container">
+			<h2>S.O.S.</h2>
+<%= link_to image_tag("arame.gif", alt: "InBattle cerca"),
+            'http://injunior.com/' %>
+    </div>
 	
-</div>
+<h1>Paginas#sos</h1>
+<p>Find me in app/views/paginas/sos.html.erb</p>
 
 
 
