--- a/inbattle/app/views/layouts/_header.html.erb
+++ b/inbattle/app/views/layouts/_header.html.erb
@@ -1,41 +1,34 @@
-<head>
-  <title>Inbattle</title>
-  <nav class="navbar navbar-default">
+<nav class="navbar navbar-fixed-top header-black">
   <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-<%= link_to image_tag("titulo.gif", alt: "InBattle logo"),
-            'http://injunior.com/' %>
-    </div>
-
-	</head>
-	
-<body>
-    <header class="navbar navbar-fixed-top navbar-inverse">
-      <div class="container">
-
-        <nav>
-         <ul class="nav navbar-nav navbar-right">
-			<li><%= link_to "Home",    root_path %></li>
-			<li><%= link_to "Alistamento",   'alistamento' %></li>
-            <li><%= link_to "Heróis de Guerra", 'heroisdeguerra' %></li>
-            <li><%= link_to "S.O.S.", 'sos' %></li>
-          </ul>
-        </nav>
+      <div class="col-md-3">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-left" href="root_path"><%= image_tag("titulo.png", alt: "InBattle logo", id: "logo", class: "img-responsive") %></a>
       </div>
-    </header>
-    <div class="container">
-	<%= link_to image_tag("arame.gif", alt: "InBattle cerca"),
-            'http://injunior.com/' %></li>
 
+      <div class="col-md-9 texto-header">
+        <% if logged_in? %>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class = "nav navbar-nav navbar-right">
+              <li><%= link_to "Editar usuários", 'users/new' %></li>
+              <li><%= link_to "Editar Temas", 'microposts/new' %></li>
+              <li><%= link_to "Log out", logout_path, method: "delete" %></li>
+            </ul>
+        <% else %>
+            <ul class="nav navbar-nav navbar-right">
+              <li><%= link_to "Home",    root_path %></li>
+              <li><%= link_to "Alistamento",   'alistamento' %></li>
+              <li><%= link_to "Heróis de Guerra", 'heroisdeguerra' %></li>
+              <li><%= link_to "S.O.S.", 'sos' %></li>
+            </ul>
+        <% end %>
+        </div>
+      </div>
     </div>
-	
-	
-    <!-- Collect the nav links, forms, and other content for toggling -->
-
-  </div><!-- /.container-fluid -->
+  </div>
 </nav>
-  <%= stylesheet_link_tag    'default', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'default', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</body>
