--- a/inbattle/app/views/microposts/show.html.erb
+++ b/inbattle/app/views/microposts/show.html.erb
@@ -4,7 +4,7 @@
   <aside class="col-md-4">
     <section class="micropost_info">
       <h1>
-
+		<%= @micropost.tema %>
         <%= @micropost.endereco %>
       </h1>
     </section>
