--- a/inbattle/app/views/layouts/_header.html.erb
+++ b/inbattle/app/views/layouts/_header.html.erb
@@ -18,6 +18,7 @@
               <li><%= link_to "Editar usuários", 'users/new' %></li>
               <li><%= link_to "Editar Temas", 'microposts/new' %></li>
               <li><%= link_to "Log out", logout_path, method: "delete" %></li>
+			  <li><%= link_to "Trocar Senha", edit_user_path(current_user) %></li>
             </ul>
         <% else %>
             <ul class="nav navbar-nav navbar-right">
