--- a/inbattle/app/views/users/index.html.erb
+++ b/inbattle/app/views/users/index.html.erb
@@ -1,21 +1,17 @@
-<h1>Listagem dos usuarios</h1>
+<% provide(:title, 'Todos Administradores') %>
+<h1>Todos os Administradores</h1>
 
-<table>
-	<tr>
-		<th>Nome</th>
-		<th>Email</th>
-	<tr>
-	<% @users.each do user %>
-	<tr>
-		<td><% => user.name <%></td>
-		<td><% => user.email <%></td>
-		<td><%= link_to "Show", user <%></td>
-		
-	</tr>
-	<% end %>
-</table>
+<ul class="users">
+  <% @users.each do |user| %>
+    <li>
 
-<%= link_to "Novo tema", new.user_path %>
-		
-		
-	
+      <%= link_to user.name, user %>
+	    <% if current_user.admin? && !current_user?(user) %>
+    | <%= link_to "Apagar Admin", user, method: :delete,
+                                  data: { confirm: "You sure?" } %>
+  <% end %>
+    </li>
+  <% end %>
+</ul>
+
+
