--- a/inbattle/app/views/paginas/home.html.erb
+++ b/inbattle/app/views/paginas/home.html.erb
@@ -26,10 +26,11 @@
 
 	<ul class="meio">
 		<% @micropost = Micropost.find(1) %>
-			<li><h1><%= @micropost.tema %></h1></li>
-		
-		<li><%= link_to image_tag("@micropost.endereco", alt: "InBattle cerca"), '#' %> </li>
-		<li><%= link_to image_tag("@micropost.endereco", alt: "InBattle cerca"), '#' %> </li>
+		<li><h1><%= @micropost.tema %></h1></li>
+		<li><%= link_to image_tag(@micropost.endereco, alt: "InBattle cerca"), '#' %> </li>
+		<li><h1>XXX</h1><</li>
+		<% @micropost = Micropost.find(2) %>
+		<li><%= link_to image_tag(@micropost.endereco, alt: "InBattle cerca"), '#' %> </li>
 	<li><%= link_to image_tag("arame.gif", alt: "InBattle cerca"), '#' %> </li>
 	</ul>
 	</div>
