--- a/inbattle/app/views/paginas/home.html.erb
+++ b/inbattle/app/views/paginas/home.html.erb
@@ -1,40 +1,29 @@
 <html>
 
-<head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-<meta name="description" content="">
-<meta name="author" content="">
-
-<title>IN Battle</title>
-
-<link href="css/bootstrap.min.css" rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="css/estilo_home.css">
-</head>
 
 <body>
 	  <%= link_to "Ad", signup_path, class: "btn btn-lg btn-primary" %>
       <% if logged_in? %>
-		<%= link_to "BD", atualiza_path, class: "btn btn-lg btn-primary" %>
+	  <%= link_to "BD", atualiza_path, class: "btn btn-lg btn-primary" %>
 	  <% end %>
 			
-			
-<div class="container-fluid">
-    <div class="container">
+<div class="container">			
+	<div class="container-fluid">
+		<li><h1><%= @tema.tema %></h1></li>
+		<%= link_to image_tag(@candidatoa.endereco, alt: "Candidato 1", width: 100, high: 100), method: soma(@candidatoa) %>
+			</div>
+			<div class="meios">
+			XXXXXX
+			</div>
+			<div class="direito">
+			<%= link_to image_tag(@candidatob.endereco, alt: "Candidato 2", width: 100, high: 100), soma(@candidatob) %>
+			</div>
 
-	<ul class="meio">
-		<% @micropost = Micropost.find(1) %>
-			<li><h1><%= @micropost.tema %></h1></li>
-		<li><%= link_to image_tag(@micropost.endereco, alt: "Candidato 1"), '#' %> </li>
-XXXXXX
-		<% @micropost = Micropost.find(2) %>
-		<li><%= link_to image_tag(@micropost.endereco, alt: "Candidato 2"), '#' %> </li>
-	<li><%= link_to image_tag("arame.gif", alt: "InBattle cerca"), '#' %> </li>
-	</ul>
-	</div>
+		
+	<%= link_to image_tag("arame.gif", alt: "InBattle cerca"), '#' %> </li>
 
+</div>
+	
 	<div class="corpo">
 	  <div class="container">
 		<div class="row">
