--- a/inbattle/app/views/users/index.html.erb
+++ b/inbattle/app/views/users/index.html.erb
@@ -7,8 +7,7 @@
 
       <%= link_to user.name, user %>
 	    <% if current_user.admin? && !current_user?(user) %>
-    | <%= link_to "Apagar Admin", user, method: :delete,
-                                  data: { confirm: "You sure?" } %>
+      <%= link_to "Apagar Admin", user, method: "delete" %>
   <% end %>
     </li>
   <% end %>
