--- a/inbattle/app/views/layouts/_header.html.erb
+++ b/inbattle/app/views/layouts/_header.html.erb
@@ -14,12 +14,17 @@
       <div class="col-md-9 texto-header">
         <% if logged_in? %>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class = "nav navbar-nav navbar-right links">
-            <li><%= link_to "editar usuários", '../../users/new' %></li>
-            <li><%= link_to "editar temas", '../../microposts/new' %></li>
-            <li><%= link_to "log out", logout_path, method: "delete" %></li>
-            <li><%= link_to "todos admin", users_path %></li>
-          </ul>
+		  <ul class = "nav navbar-nav navbar-right">
+		  <li><%= link_to "Incluir usuários", '../../users/new' %></li>
+          <li><%= link_to "Incluir Temas", '../../temas/new' %></li>
+          <li><%= link_to "Incluir Candidatos", '../../candidatos/new' %></li>
+		  <li><%= link_to "Trocar Senha", edit_user_path(current_user) %></li>
+          <li><%= link_to "Log out", logout_path, method: "delete" %></li>
+		  <li><%= link_to "Todos admin", users_path %></li>
+		  <li><%= link_to "Todos candidatos", candidatos_path %></li>
+		  <li><%= link_to "Todos os temas", temas_path %></li>
+		  
+		  </ul>
 
         <% else %>
           <ul class="nav navbar-nav navbar-right links">
