--- a/inbattle/app/views/paginas/home.html.erb
+++ b/inbattle/app/views/paginas/home.html.erb
@@ -7,21 +7,20 @@
 	  <%= link_to "BD", atualiza_path, class: "btn btn-lg btn-primary" %>
 	  <% end %>
 			
-<div class="container">			
-	<div class="container-fluid">
-		<li><h1><%= @tema.tema %></h1></li>
-		<%= link_to image_tag(@candidatoa.endereco, alt: "Candidato 1", width: 100, high: 100), method: soma(@candidatoa) %>
-			</div>
-			<div class="meios">
+
+		<h1><%= @tema.tema %></h1></li>
+		<%= link_to image_tag(@candidatoa.endereco, alt: "Candidato 1", width: 300, high: 300), method: soma(@candidatoa) %>
+
+
 			XXXXXX
-			</div>
-			<div class="direito">
-			<%= link_to image_tag(@candidatob.endereco, alt: "Candidato 2", width: 100, high: 100), soma(@candidatob) %>
-			</div>
 
-		
-	<%= link_to image_tag("arame.gif", alt: "InBattle cerca"), '#' %> </li>
 
+			<%= link_to image_tag(@candidatob.endereco, alt: "Candidato 2", width: 300, high: 300), soma(@candidatob) %>
+
+
+	<div>
+		<%= link_to image_tag("arame.gif", alt: "InBattle cerca"), '#' %> </li>
+	</div>
 </div>
 	
 	<div class="corpo">
@@ -36,43 +35,10 @@
 			<span>Tira essa farda preta que vc é moleque...</span><br>
 			<span>ou poste logo uma foto no Instagram com a <b>#INBattle</b></span>
 		</div>
-		        </div> <!-- /.container -->
+		        </div> 
 
-	</div> <!-- /.corpo -->
+	</div>
 </div>	
-
-﻿<div class="footer">
-	  <div class="container">
-		<div class="row text-center col-xs-12 col-sm-12 col-md-12 col-lg-12">
-			<div class="col-xs-12 col-sm-3">
-    <div class="container">
-		<%= link_to image_tag("logo.png", alt: "InJunior"),
-            'http://injunior.com/' %>
-    </div>
-			</div>
-			<div class="col-xs-12 col-sm-9">
-				<p class="p-footer-top"> IN Junior - Empresa Junior do Instituto de Computação da UFF - Todos os direitos reservados</p>
-				<p class="p-footer">Rua Passos da Pátria, 156 - Instituto de Computação - Sala 115-B, Niterói</p>
-			</div>
-		</div>
-	  </div> <!-- /.container -->
-	</div> <!-- /.footer -->	
-
-	<script async="" src="//www.google-analytics.com/analytics.js"></script><script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" type="text/javascript"></script>
-	<script type="text/javascript" src="http://simplewebcodes.com/wp-content/themes/scriptous/plugins/bootstrap/js/bootstrap.min.js?ver=4.0"></script>
-	<script src="appendInsta.js"></script>
-	<script src="js/jquery.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script>
-		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-					(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-				m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-		ga('create', 'UA-69749775-1', 'auto');
-		ga('send', 'pageview');
-
-	</script>
 
 
 </body>
