--- a/inbattle/app/views/paginas/home.html.erb
+++ b/inbattle/app/views/paginas/home.html.erb
@@ -12,9 +12,9 @@
 
 		<h1><%= @tema.tema %></h1></li>
 		
-		<%= link_to image_tag(@candidatoa.endereco, alt: "Candidato 1", width: 300, high: 300), soma(@candidatoa) %>
+		<%= link_to image_tag(@candidatoa.endereco, alt: "Candidato 1", width: 300, high: 300), soma1_path  %>
 			XXXXXXXXXXXXXXXXXX
-		<%= link_to image_tag(@candidatob.endereco, alt: "Candidato 2", width: 300, high: 300), soma(@candidatob) %>
+		<%= link_to image_tag(@candidatob.endereco, alt: "Candidato 2", width: 300, high: 300), soma2_path %>
 
 	<div>
 		<%= link_to image_tag("arame.gif", alt: "InBattle cerca"), '#' %> </li>
