--- a/inbattle/app/assets/stylesheets/paginas.scss
+++ b/inbattle/app/assets/stylesheets/paginas.scss
@@ -1,3 +1,9 @@
 // Place all the styles related to the Paginas controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.pag-contato{
+    
+}
+.pag-contato h1 {
+  font-size: 2em;
+}
