--- a/inbattle/app/views/temas/index.html.erb
+++ b/inbattle/app/views/temas/index.html.erb
@@ -2,9 +2,9 @@
 <h1>Todos os Temas</h1>
 
 <ul class="temas">
-  <% @temaa.each do |temaa| %>
+  <% @tema.each do |tema| %>
     <li>
-      <%= link_to temaa.tema, temaa %>
+      <%= link_to tema.conteudo, tema %>
     </li>
   <% end %>
 </ul>
