ja da para trocar o tema pelo mais votado

--- a/inbattle/app/views/paginas/home.html.erb
+++ b/inbattle/app/views/paginas/home.html.erb
@@ -34,7 +34,7 @@
 			<span>Tira essa farda preta que vc é moleque...</span><br>
 			<span>ou poste logo uma foto no Instagram com a <b>#INBattle</b></span>
 		</div>
-				  <h3>"Quer votar num tema para amanhã?"</h3>
+				  <h3>Quer votar num tema para amanhã?</h3>
 		<%= link_to @assunto1.conteudo, voto1_path, class: "btn btn-lg btn-primary" %>
 		<%= link_to @assunto2.conteudo, voto2_path, class: "btn btn-lg btn-primary" %>
 		<%= link_to @assunto3.conteudo, voto3_path, class: "btn btn-lg btn-primary" %>
