--- a/inbattle/app/views/temas/index.html.erb
+++ b/inbattle/app/views/temas/index.html.erb
@@ -1,10 +1,14 @@
 <% provide(:title, 'Todos os Temas') %>
 <h1>Todos os Temas</h1>
 
+		<%= link_to "Mudar o tema do dia pela pontuação", trocar_os_temas_path, class: "btn btn-lg btn-primary" %>
+		
 <ul class="temas">
   <% @tema.each do |tema| %>
     <li>
       <%= link_to tema.conteudo, tema %>
+	  <h4>Pontos:
+	  <%= link_to tema.pontos, tema %> </h4>
     </li>
   <% end %>
 </ul>
