--- a/inbattle/app/views/layouts/_header.html.erb
+++ b/inbattle/app/views/layouts/_header.html.erb
@@ -16,7 +16,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		  <ul class = "nav navbar-nav navbar-right">
 		  <li><%= link_to "Incluir usuários", '../../users/new' %></li>
-          <li><%= link_to "Incluir Temas", '../../temas/new' %></li>
+          <li><%= link_to "Inicializar Temas", '../../temas/new' %></li>
           <li><%= link_to "Incluir Candidatos", '../../candidatos/new' %></li>
 		  <li><%= link_to "Trocar Senha", edit_user_path(current_user) %></li>
           <li><%= link_to "Log out", logout_path, method: "delete" %></li>
