--- a/inbattle/app/views/temas/new.html.erb
+++ b/inbattle/app/views/temas/new.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'Entrada dos Temas') %>
-<h1>Entrada dos Temas</h1>
+<h1>Dê entrada em quatro temas para inicializar</h1>
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
@@ -13,3 +13,5 @@
     <% end %>
   </div>
 </div>
+
+
