--- a/inbattle/app/views/temas/show.html.erb
+++ b/inbattle/app/views/temas/show.html.erb
@@ -1,9 +1,9 @@
-<% provide(:title, @tema) %>
+<% provide(:title, @tema.conteudo) %>
 <div class="row">
   <aside class="col-md-4">
-    <section class="user_info">
+    <section class="tema_info">
       <h1>
-        <%= Temas.conteudo %>
+        <%= @tema.conteudo %>
       </h1>
     </section>
   </aside>
