instrucoes para inicializar em README.rdoc

--- a/inbattle/app/views/candidatos/index.html.erb
+++ b/inbattle/app/views/candidatos/index.html.erb
@@ -6,7 +6,7 @@
     <li><%= cand.endereco %>
 	<%= link_to image_tag(cand.endereco, alt: "Candidato 1", width: 80, high: 80), '#' %>
 	</li>
-	<li>Pontos: <%= cand.pontos %>
+	<li><h3>Pontos: <%= cand.pontos %></li></h3><br></br>
 
   <% end %>
 </ul>
