--- a/inbattle/app/views/layouts/_header.html.erb
+++ b/inbattle/app/views/layouts/_header.html.erb
@@ -1,42 +1,35 @@
-<nav class="navbar navbar-fixed-top header-black">
+<nav class="navbar navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
-      <div class="col-md-3">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-left" href="/"><%= image_tag("titulo.png", alt: "InBattle logo", id: "logo", class: "img-responsive") %></a>
-      </div>
-
-      <div class="col-md-9 texto-header">
-        <% if logged_in? %>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-		  <ul class = "nav navbar-nav navbar-right">
-		  <li><%= link_to "Incluir usuários", '../../users/new' %></li>
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-left" href="/"><%= image_tag("inbattle ap.png", alt: "InBattle logo", id: "logo", class: "img-responsive") %></a>
+    </div>
+    
+      <div class="collapse navbar-collapse texto-header" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav navbar-right links">
+      <% if logged_in? %>
+  		    <li><%= link_to "Incluir usuários", '../../users/new' %></li>
           <li><%= link_to "Inicializar Temas", '../../temas/new' %></li>
           <li><%= link_to "Incluir Candidatos", '../../candidatos/new' %></li>
-		  <li><%= link_to "Trocar Senha", edit_user_path(current_user) %></li>
+		      <li><%= link_to "Trocar Senha", edit_user_path(current_user) %></li>
           <li><%= link_to "Log out", logout_path, method: "delete" %></li>
-		  <li><%= link_to "Todos admin", users_path %></li>
-		  <li><%= link_to "Todos candidatos", candidatos_path %></li>
-		  <li><%= link_to "Todos os temas", temas_path %></li>
-		  
-		  </ul>
-
-        <% else %>
-          <ul class="nav navbar-nav navbar-right links">
-            <li><%= link_to "início",    root_path %></li>
-            <li><%= link_to "alistamento",   alistamento_path %></li>
-            <li><%= link_to "heróis de guerra", heroisdeguerra_path %></li>
-            <li><%= link_to "contato", sos_path %></li>
-          </ul>
-        <% end %>
-        </div>
+    		  <li><%= link_to "Todos admin", users_path %></li>
+    		  <li><%= link_to "Todos candidatos", candidatos_path %></li>
+    		  <li><%= link_to "Todos os temas", temas_path %></li>
+      <% else %>
+          <li><%= link_to "início",    root_path %></li>
+          <li><%= link_to "alistamento",   alistamento_path %></li>
+          <li><%= link_to "heróis de guerra", heroisdeguerra_path %></li>
+          <li><%= link_to "contato", sos_path %></li>
+      <% end %>
+        </ul>
       </div>
-    </div>
+    
   </div>
 </nav>
 
