--- a/inbattle/app/views/layouts/_header.html.erb
+++ b/inbattle/app/views/layouts/_header.html.erb
@@ -1,15 +1,15 @@
-<nav class="navbar navbar-fixed-top">
+<nav class="navbar">
   <div class="container-fluid">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
+      
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
       <a class="navbar-left" href="/"><%= image_tag("inbattle ap.png", alt: "InBattle logo", id: "logo", class: "img-responsive") %></a>
-    </div>
-    
+      
       <div class="collapse navbar-collapse texto-header" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right links">
       <% if logged_in? %>
@@ -26,10 +26,12 @@
           <li><%= link_to "alistamento",   alistamento_path %></li>
           <li><%= link_to "heróis de guerra", heroisdeguerra_path %></li>
           <li><%= link_to "contato", sos_path %></li>
+          <%= link_to "login", signup_path, class: "btn btn-lg btn-primary" %>
       <% end %>
         </ul>
       </div>
-    
+    </div>
   </div>
 </nav>
 
+<%= image_tag("arame farpado navbar.png", alt: "aramin", class:"arame") %>
